# st

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: combined.fits  first.fits  last.fits
includes/cfitsio/: fitsio.h
includes/stb/: stb_image_write.h
tests/: mock_data.cpp  mock_data.h  test_alglib_lsfit.cpp  test_api.h  test_st.cpp
utils/: api.cpp  api.h  calc_bg.cpp  calc_bg.h  constants.h  deperacated.cpp  fits_io.cpp  fits_io.h  helper_traits.h  helper_types.cpp  helper_types.h  lsfit.cpp  lsfit.h  normal_io.cpp  normal_io.h  numeric_utils.h  psf.cpp  psf.h
